--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,10 +17,9 @@ jobs:
                   pip install --user --no-cache-dir Cython
                   pip install --user -r requirements.txt
                   pip install .
-            - run: pip install -r requirements_docs.txt
+            - run: pip install --user -r requirements_docs.txt
             - name: Discover typos with codespell
               run: |
-                  pip install codespell
                   codespell --skip="*.csv,*.geojson,*.json,*.js,*.html,*cff,./.git" --ignore-words-list="aci,acount,acounts,fallow,hart,hist,nd,ned,ois,wqs,watermask"
             - name: PKG-TEST
               run: |
