--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -28,7 +28,7 @@ jobs:
                   pip install -r requirements.txt -r requirements_dev.txt  -r requirements_docs.txt
                   pip install .
             - name: Discover typos with codespell
-              run: codespell --skip="*.csv,*.geojson,*.json,*.js,*.html,*cff,*.pdf,./.git" --ignore-words-list="aci,acount,acounts,fallow,hart,hist,nd,ned,ois,wqs"
+              run: codespell --skip="*.csv,*.geojson,*.json,*.js,*.html,*cff,*.pdf,./.git,./docs/examples/earthnet2021.ipynb" --ignore-words-list="aci,acount,acounts,fallow,hart,hist,nd,ned,ois,wqs"
             - name: PKG-TEST
               run: |
                   python -m unittest discover tests/
