--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,9 +45,9 @@ plugins:
           type: timeago
     # - pdf-export
     - mkdocs-jupyter:
-          include_source: True
-          ignore_h1_titles: True
-          execute: True
+          include_source: true
+          ignore_h1_titles: true
+          execute: false
           allow_errors: false
           ignore: ["conf.py"]
           execute_ignore: ["*ignore.ipynb"]
