--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
             - run: pip install --user -r requirements_docs.txt
             - name: Discover typos with codespell
               run: |
-                  codespell --skip="*.csv,*.geojson,*.json,*.js,*.html,*cff,./.git" --ignore-words-list="aci,acount,acounts,fallow,hart,hist,nd,ned,ois,wqs,watermask"
+                  codespell --skip="*.csv,*.geojson,*.json,*.js,*.html,*cff,./.git,./docs/examples/earthnet2021.ipynb" --ignore-words-list="aci,acount,acounts,fallow,hart,hist,nd,ned,ois,wqs,watermask"
             - name: PKG-TEST
               run: |
                   python -m unittest discover tests/
