--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include LICENSE
 include README.md
 include requirements.txt
 
-recursive-exclude * __pycache__
+recursive-include earthformer/scripts *
 recursive-exclude * *.py[co]
+recursive-exclude * __pycache__
 
